--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "**/*.js": "eslint --max-warnings 0"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0-alpha",
-    "react-dom": "^15.3.0 || ^16.0.0-alpha"
+    "react": "^15.3.0 || ^16.0.0-alpha || ^17.0.0",
+    "react-dom": "^15.3.0 || ^16.0.0-alpha || ^17.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
